# lyric-tab

./: CMakeLists.txt  lyric-tabConfig.cmake.in  lyric-tab_res.qrc
include/lyric-tab/: LyricTab.h  LyricTabConfig.h  LyricTabGlobal.h
include/lyric-tab/Controls/: CellList.h  EditDialog.h  HandleItem.h  LyricCell.h  LyricWrapView.h  PhonicTextEdit.h  SplitterItem.h
include/lyric-tab/Widgets/: LyricBaseWidget.h  LyricExtWidget.h
share/translations/: lyric-tab_zh_CN.qm  lyric-tab_zh_CN.ts
src/Commands/Cell/: AddNextCellCmd.cpp  AddNextCellCmd.h  AddPrevCellCmd.cpp  AddPrevCellCmd.h  ChangeSyllableCmd.cpp  ChangeSyllableCmd.h  ClearCellCmd.cpp  ClearCellCmd.h  DeleteCellCmd.cpp  DeleteCellCmd.h  EditCellCmd.cpp  EditCellCmd.h
src/Commands/Line/: AddNextLineCmd.cpp  AddNextLineCmd.h  AddPrevLineCmd.cpp  AddPrevLineCmd.h  AppendCellCmd.cpp  AppendCellCmd.h  DeleteLineCmd.cpp  DeleteLineCmd.h  LinebreakCmd.cpp  LinebreakCmd.h
src/Commands/View/: ClearCellsCmd.cpp  ClearCellsCmd.h  DeleteCellsCmd.cpp  DeleteCellsCmd.h  DeleteLinesCmd.cpp  DeleteLinesCmd.h  MoveDownLinesCmd.cpp  MoveDownLinesCmd.h  MoveUpLinesCmd.cpp  MoveUpLinesCmd.h
src/Utils/: SplitLyric.cpp  SplitLyric.h
src/Utils/LrcTools/: LrcDecoder.cpp  LrcDecoder.h  LrcDecoder_p.h
src/View/: LyricTab.cpp
src/View/Controls/: CellList.cpp  EditDialog.cpp  HandleItem.cpp  LyricCell.cpp  LyricWrapView.cpp  PhonicTextEdit.cpp  SplitterItem.cpp
src/View/Widgets/: LyricBaseWidget.cpp  LyricExtWidget.cpp
tests/: CMakeLists.txt  main.cpp
tests/Resources/theme/: lite-dark.qss
tests/lyric-tab/: main.cpp
tests/lyric-tab/Resources/theme/: lyricwarpview-dark.qss
tests/qml/: CMakeLists.txt  lyricWrapView.qml  main.cpp
